--- a/bootstrap/templates/admin-dashboard.html
+++ b/bootstrap/templates/admin-dashboard.html
@@ -656,8 +656,8 @@
                 <svg width="120" height="40" viewBox="0 0 400 120" xmlns="http://www.w3.org/2000/svg">
                     <defs>
                         <linearGradient id="memuGradient1" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" style="stop-color:#e94560;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#ff6b6b;stop-opacity:1" />
+                            <stop offset="0%" style="stop-color:#667eea;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#764ba2;stop-opacity:1" />
                         </linearGradient>
                     </defs>
                     <!-- Icon: Three overlapping circles -->
